[metadata]
name = 
version = 
author = 
author_email = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:

[options.packages.find]
include = aTrain